# ai-utils

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  book.toml  example_article.json  langfuse_spec.yml
.cursor/rules/: rust-rules.mdc
.github/workflows/: docs.yml
.tmp/sessions/2025-02-20-refactoring/: context.md
.tmp/tasks/refactoring/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  task.json
book/: 404.html  index.html  print.html  searchindex.js  toc.html  toc.js
book/core-concepts/: architecture.html
book/docs/scripts/: custom.js
book/docs/styles/: custom.css
book/getting-started/: configuration.html  installation.html  quick-start.html
book/modules/: overview.html
docs/: README.md
docs/book/: index.html  print.html  searchindex.js  toc.html  toc.js
docs/book/api/: common-types.html  langfuse-service.html  openai-service.html  qdrant-service.html  text-splitter.html
docs/book/contributing/: code-style.html  development-setup.html  testing.html
docs/book/core-concepts/: architecture.html  async-operations.html  error-handling.html
docs/book/deployment/: environment-variables.html  performance-tuning.html  production-setup.html
docs/book/examples/: basic-chat-bot.html  document-qa.html  image-analysis.html  multimodal-agent.html
docs/book/getting-started/: configuration.html  installation.html  quick-start.html
docs/book/modules/: langfuse.html  overview.html
docs/book/modules/common/: base64.html  image-processing.html  overview.html
docs/book/modules/langfuse/: monitoring.html  overview.html  traces-spans.html
docs/book/modules/openai/: audio-transcription.html  chat-completions.html  embeddings.html  image-generation.html  overview.html
docs/book/modules/qdrant/: collections.html  overview.html  vector-search.html
docs/book/modules/text-splitter/: chunking.html  overview.html  tokenization.html
docs/plans/: refactoring-plan.md
docs/src/: README.md  SUMMARY.md
docs/src/api/: langfuse-service.md  openai-service.md  qdrant-service.md  text-splitter.md
docs/src/core-concepts/: architecture.md  async-operations.md
docs/src/examples/: document-qa.md  multimodal-agent.md
docs/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/src/modules/: langfuse.md  overview.md  qdrant.md
src/: langfuse.rs  lib.rs  openai.rs
src/common/: errors.rs  mod.rs  types.rs  utils.rs
src/error/: mod.rs
src/langfuse/: mod.rs  service.rs  types.rs
src/openai/: mod.rs  service.rs  types.rs
src/openrouter/: mod.rs  service.rs  types.rs
src/qdrant/: mod.rs  qdrant_service.rs
src/telemetry/: mod.rs  service.rs  types.rs
src/text_splitter/: mod.rs  text_service.rs
