[package]
name = "ai_utils"
version = "0.1.0"
edition = "2021"

[features]
default = ["openai", "qdrant", "langfuse", "text-splitter"]
openai = ["async-openai"]
qdrant = ["qdrant-client"]
langfuse = []
text-splitter = ["tiktoken-rs"]
full = ["openai", "qdrant", "langfuse", "text-splitter"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-openai = { version = "0.28.1", optional = true }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
base64 = "0.22.1" 
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
image = "0.25.9"
futures = "0.3"
tempfile = "3.25.0"

clap = { version = "4.5.57", features = ["derive"] }
regex = "1.12.3"
tiktoken-rs = { version = "0.9.1", optional = true }
anyhow = "1.0.101"
tracing = "0.1.44" 
tracing-subscriber = "0.3.22"
env_logger = "0.11.8"
qdrant-client = { version = "1.1.0", optional = true }
dotenv = "0.15.0"