[package]
name = "ai_utils"
version = "0.1.0"
edition = "2021"

[features]
default = ["openrouter", "qdrant", "telemetry", "text-splitter"]
openrouter = ["async-openai"]
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry", "tracing-subscriber"]
qdrant = ["qdrant-client", "openrouter"]
text-splitter = ["tiktoken-rs"]
full = ["openrouter", "qdrant", "telemetry", "text-splitter"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-openai = { version = "0.33.0", optional = true, features = ["chat-completion", "image", "audio", "embedding", "model"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
base64 = "0.22.1" 
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
image = "0.25.9"
futures = "0.3.32"
tempfile = "3.25.0"

clap = { version = "4.5.59", features = ["derive"] }
regex = "1.12.3"
tiktoken-rs = { version = "0.9.1", optional = true }
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
env_logger = "0.11.8"
qdrant-client = { version = "1.16.0", optional = true }
dotenv = "0.15.0"

# OpenTelemetry dependencies
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["http-proto"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }